# f1-data-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/domain/: exceptions.py
app/domain/models/: circuit.py  constructor.py  driver.py  race.py  team.py
app/infrastructure/ergast/: client.py  mappers.py
tests/: test_main.py
